--- a/index.html
+++ b/index.html
@@ -15,13 +15,61 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- preload images -->
 </head>
 
 <body>
-  <h1>Hello, 6Code!</h1>
+  <!-- header -->
+  <header class="header" data-header>
+    <div class="container">
+      <a href="#" class="logo">
+        <img src="./assets/images/logo.svg" alt="Six Code - Logo">
+      </a>
+
+
+      <button class="nav-toggle-btn" data-nav-toggle-btn>
+        <ion-icon name="menu-outline" class="open"></ion-icon>
+        <ion-icon name="close-outline" class="close"></ion-icon>
+      </button>
+
+      <nav class="navbar">
+        <div class="container">
+          <ul class="navbar-list">
+
+            <li>
+              <a href="#home" class="navbar-link" data-navbar-link>Home</a>
+            </li>
+
+            <li>
+              <a href="#sobre" class="navbar-link" data-navbar-link>Sobre</a>
+            </li>
+
+            <li>
+              <a href="#servicos" class="navbar-link" data-navbar-link>Serviços</a>
+            </li>
+
+            <li>
+              <a href="#produtos" class="navbar-link" data-navbar-link>Produtos</a>
+            </li>
+
+            <li>
+              <a href="#contato" class="navbar-link" data-navbar-link>Contato</a>
+            </li>
+
+          </ul>
+        </div>
+      </nav>
+
+      <button class="btn btn-secondary">
+        <span>Fale Conosco</span>
+        <ion-icon name="chevron-forward-outline"></ion-icon>
+      </button>
+
+    </div> <!-- /container -->
+
+  </header>
 
   <!-- JS -->
   <script src="./assets/js/script.js"></script>
