--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
 
   <!-- preload images -->
 </head>
@@ -70,6 +71,44 @@
     </div> <!-- /container -->
 
   </header>
+
+  <main>
+    <article>
+
+      <!-- HERO --> 
+      <section class="hero" id="home">
+
+        <img src="./assets/images/shape1.webp" alt="Illustration art" class="shape shape-1">
+        <img src="./assets/images/shape2.webp" alt="Illustration art" class="shape shape-2">
+
+        <div class="container">
+
+          <figure class="hero-banner">
+            <img src="./assets/images/hero-banner.svg" alt="Illustration art" loading="lazy" class="w-100">
+          </figure>
+
+          <div class="hero-content">
+
+            <h2 class="h1 hero-title">Inovação Digital Sob Medida</h2>
+
+            <p class="section-text">
+              Criamos sistemas, sites e aplicativos que transformam negócios através da tecnologia.
+            </p>
+
+            <button class="btn btn-primary">
+              <span>Nossos Projetos</span>
+
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </button>
+
+          </div>
+
+        </div>
+
+      </section>
+
+    </article>
+  </main>
 
   <!-- JS -->
   <script src="./assets/js/script.js"></script>
