--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </li>
 
             <li>
-              <a href="#sobre" class="navbar-link" data-navbar-link>Sobre</a>
+              <a href="#features" class="navbar-link" data-navbar-link>O que fazemos</a>
             </li>
 
             <li>
@@ -75,9 +75,8 @@
   <main>
     <article>
 
-      <!-- HERO --> 
+      <!-- HERO -->
       <section class="hero" id="home">
-
         <img src="./assets/images/shape1.webp" alt="Illustration art" class="shape shape-1">
         <img src="./assets/images/shape2.webp" alt="Illustration art" class="shape shape-2">
 
@@ -97,7 +96,6 @@
 
             <button class="btn btn-primary">
               <span>Nossos Projetos</span>
-
               <ion-icon name="chevron-forward-outline"></ion-icon>
             </button>
 
@@ -105,6 +103,111 @@
 
         </div>
 
+      </section> <!-- /hero -->
+
+
+      <!-- FEATURES -->
+
+      <section class="features" id="features">
+        <div class="container">
+
+          <p class="section-subtitle">O que fazemos</p>
+
+          <h2 class="h2 section-title">Como podemos ajudar seu negócio</h2>
+
+          <ul class="features-list">
+
+            <li>
+              <div class="features-card">
+
+                <div class="card-icon">
+                  <img src="./assets/images/icon-code-web.png" alt="Illustration icon">
+                </div>
+
+                <h3 class="h3 card-title">Sistemas Web</h3>
+
+                <p class="card-text">
+                  Desenvolvimento de sistemas sob medida para o seu negócio, adotando as melhores práticas de mercado.
+                </p>
+
+                <!-- <a href="#" class="card-link">
+                  <span>Learn More</span>
+
+                  <ion-icon name="chevron-forward-outline"></ion-icon>
+                </a> -->
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <div class="card-icon">
+                  <img src="./assets/images/icon-dev-mobile.png" alt="Illustration icon">
+                </div>
+
+                <h3 class="h3 card-title">Aplicativos Mobile</h3>
+
+                <p class="card-text">
+                  Desenvolvimento de aplicativos para smartphones com sistemas Android e iOS.
+                </p>
+
+                <!-- <a href="#" class="card-link">
+                  <span>Learn More</span>
+
+                  <ion-icon name="chevron-forward-outline"></ion-icon>
+                </a> -->
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <div class="card-icon">
+                  <img src="./assets/images/icon-web-design.png" alt="Illustration icon">
+                </div>
+
+                <h3 class="h3 card-title">Design UX/UI</h3>
+
+                <p class="card-text">
+                  Desenvolvimento de soluções pensados e projetadas para proporcionar a melhor experiência de usuário.
+                </p>
+
+                <!-- <a href="#" class="card-link">
+                  <span>Learn More</span>
+
+                  <ion-icon name="chevron-forward-outline"></ion-icon>
+                </a> -->
+
+              </div>
+            </li>
+
+            <li>
+              <div class="features-card">
+
+                <div class="card-icon">
+                  <img src="./assets/images/icon-more.png" alt="Illustration icon">
+                </div>
+
+                <h3 class="h3 card-title">Outros serviços</h3>
+
+                <p class="card-text">
+                  Desenvolvimento de outros serviços tecnológicos para impulsionar seu negócio.
+                </p>
+
+                <!-- <a href="#" class="card-link">
+                  <span>Learn More</span>
+
+                  <ion-icon name="chevron-forward-outline"></ion-icon>
+                </a> -->
+
+              </div>
+            </li>
+
+          </ul>
+
+        </div>
       </section>
 
     </article>
