--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </li>
 
             <li>
-              <a href="#servicos" class="navbar-link" data-navbar-link>Serviços</a>
+              <a href="#service" class="navbar-link" data-navbar-link>Como fazemos</a>
             </li>
 
             <li>
@@ -208,7 +208,127 @@
           </ul>
 
         </div>
-      </section>
+      </section> <!-- /features -->
+
+      <!-- SERVICE -->
+
+      <section class="service" id="service">
+        <div class="container">
+
+          <figure class="service-banner">
+            <img src="./assets/images/service-1.svg" alt="Illustration art" loading="lazy" class="w-100">
+          </figure>
+
+          <div class="service-content">
+
+            <p class="section-subtitle">Nosso processo</p>
+
+            <h2 class="h2 section-title">Metodologia para um desenvolvimento eficaz</h2>
+
+            <ul class="service-list">
+
+              <li class="service-item">
+
+                <div class="service-item-icon">
+                  <ion-icon name="checkmark-outline"></ion-icon>
+                </div>
+
+                <h3 class="h3 service-item-title">Idealizar</h3>
+
+              </li>
+
+              <li class="service-item">
+
+                <div class="service-item-icon">
+                  <ion-icon name="checkmark-outline"></ion-icon>
+                </div>
+
+                <h3 class="h3 service-item-title">Desenvolver</h3>
+
+              </li>
+
+              <li class="service-item">
+
+                <div class="service-item-icon">
+                  <ion-icon name="checkmark-outline"></ion-icon>
+                </div>
+
+                <h3 class="h3 service-item-title">Melhorar</h3>
+
+              </li>
+
+              <li class="service-item">
+
+                <div class="service-item-icon">
+                  <ion-icon name="checkmark-outline"></ion-icon>
+                </div>
+
+                <h3 class="h3 service-item-title">Conferir</h3>
+
+              </li>
+
+            </ul>
+
+          </div>
+
+          <figure class="service-banner">
+            <img src="./assets/images/service-2.svg" alt="Illustration art" loading="lazy" class="w-100">
+          </figure>
+
+          <div class="service-content">
+
+            <p class="section-subtitle">Profissionalismo</p>
+
+            <h2 class="h2 section-title">Utilizamos os melhores paradigmas do mercado</h2>
+
+            <ul class="service-list">
+
+              <li class="service-item">
+
+                <div class="service-item-icon">
+                  <ion-icon name="checkmark-outline"></ion-icon>
+                </div>
+
+                <h3 class="h3 service-item-title">Usabilidade</h3>
+
+              </li>
+
+              <li class="service-item">
+
+                <div class="service-item-icon">
+                  <ion-icon name="checkmark-outline"></ion-icon>
+                </div>
+
+                <h3 class="h3 service-item-title">Escalabilidade</h3>
+
+              </li>
+
+              <li class="service-item">
+
+                <div class="service-item-icon">
+                  <ion-icon name="checkmark-outline"></ion-icon>
+                </div>
+
+                <h3 class="h3 service-item-title">Estabilidade</h3>
+
+              </li>
+
+              <li class="service-item">
+
+                <div class="service-item-icon">
+                  <ion-icon name="checkmark-outline"></ion-icon>
+                </div>
+
+                <h3 class="h3 service-item-title">Segurança</h3>
+
+              </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+      </section> <!-- /service -->
 
     </article>
   </main>
