--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
             </li>
 
             <li>
-              <a href="#produtos" class="navbar-link" data-navbar-link>Produtos</a>
-            </li>
-
-            <li>
               <a href="#contato" class="navbar-link" data-navbar-link>Contato</a>
             </li>
 
@@ -332,6 +328,119 @@
 
     </article>
   </main>
+
+  <!-- FOOTER -->
+
+  <footer class="footer" id="contato">
+
+    <div class="footer-top">
+      <div class="container">
+
+        <div class="footer-brand">
+
+          <a href="#" class="logo">
+            <img src="./assets/images/logo.svg" alt="Solutry logo">
+          </a>
+
+          <p class="section-text">
+            A 6CODE é especializada em desenvolvimento de sistemas e aplicativos, trabalhamos para transformar ideias em realidade digital. Nossa missão é simplificar a complexidade tecnológica e ajudar empresas a prosperar no mundo digital.
+          </p>
+
+          <!-- <div class="location-text">
+            <div class="location-icon">
+              <ion-icon name="location-outline"></ion-icon>
+            </div>
+
+            <address class="address">
+              Endereço
+            </address>
+          </div> -->
+
+        </div>
+
+        <div class="quicklink-box">
+          <p class="h3 quicklink-title">Acesso rápido</p>
+
+          <ul class="quicklink-list">
+
+            <li>
+              <a href="#" class="quicklink">Carteirinha Digital</a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink">Sistema de Escala de Trabalho</a>
+            </li>
+
+          </ul>
+        </div>
+
+        <div class="contact">
+          <p class="h3 contact-title">Fale conosco</p>
+
+          <ul class="contact-list">
+
+            <li class="contact-item">
+              <div class="contact-icon">
+                <ion-icon name="mail-outline"></ion-icon>
+              </div>
+
+              <a href="mailto:hello@solutry.com" class="contact-link">contato@6code.com.br</a>
+            </li>
+
+            <li class="contact-item">
+              <div class="contact-icon">
+                <ion-icon name="call-outline"></ion-icon>
+              </div>
+
+              <a href="tel:+14854560102" class="contact-link">+55 82 9xxxx-xxxx</a>
+            </li>
+
+          </ul>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <div class="container">
+
+        <p class="copyright">
+          &copy; 2023 6code. Direitos Reservados
+        </p>
+
+        <!-- <ul class="social-list">
+
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+
+        </ul> -->
+
+      </div>
+    </div>
+
+  </footer>
+
 
   <!-- JS -->
   <script src="./assets/js/script.js"></script>
