--- a/index.html
+++ b/index.html
@@ -326,12 +326,58 @@
         </div>
       </section> <!-- /service -->
 
+      <!-- 
+        - #NEWSLETTER
+      -->
+
+      <section class="contato" id="contato">
+        <div class="container">
+
+          <figure class="contato-banner">
+            <img src="./assets/images/illustration-contact.svg" alt="Illustration art" loading="lazy" class="w-100">
+          </figure>
+
+          <div class="contato-content">
+
+            <h2 class="h2 section-title">Quer inovar seu negócio ou tirar seu projeto do papel?</h2>
+
+            <div class="contact">
+              <p class="h3 contact-title">Entre em contato conosco</p>
+
+              <ul class="contact-list">
+
+                <li class="contact-item">
+                  <div class="contact-icon">
+                    <ion-icon name="mail-outline"></ion-icon>
+                  </div>
+
+                  <a href="mailto:hello@solutry.com" class="contact-link">contato@6code.com.br</a>
+                </li>
+
+                <li class="contact-item">
+                  <div class="contact-icon">
+                    <ion-icon name="call-outline"></ion-icon>
+                  </div>
+
+                  <a href="tel:+14854560102" class="contact-link">+55 82 9xxxx-xxxx</a>
+                </li>
+
+              </ul>
+            </div>
+
+
+
+          </div>
+
+        </div>
+      </section> <!-- /contato -->
+
     </article>
   </main>
 
   <!-- FOOTER -->
 
-  <footer class="footer" id="contato">
+  <footer class="footer">
 
     <div class="footer-top">
       <div class="container">
@@ -343,7 +389,9 @@
           </a>
 
           <p class="section-text">
-            A 6CODE é especializada em desenvolvimento de sistemas e aplicativos, trabalhamos para transformar ideias em realidade digital. Nossa missão é simplificar a complexidade tecnológica e ajudar empresas a prosperar no mundo digital.
+            A 6CODE é especializada em desenvolvimento de sistemas e aplicativos, trabalhamos para transformar ideias em
+            realidade digital. Nossa missão é simplificar a complexidade tecnológica e ajudar empresas a prosperar no
+            mundo digital.
           </p>
 
           <!-- <div class="location-text">
