--- a/index.html
+++ b/index.html
@@ -489,6 +489,13 @@
 
   </footer>
 
+  <!-- 
+    - #GO TO TOP
+  -->
+
+  <a href="#top" class="go-top active" data-go-top>
+    <ion-icon name="chevron-up-outline"></ion-icon>
+  </a>
 
   <!-- JS -->
   <script src="./assets/js/script.js"></script>
