--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         </div>
       </nav>
 
-      <button class="btn btn-secondary">
-        <span>Fale Conosco</span>
+      <!-- <button class="btn btn-secondary">
+        <span>WhatsApp</span>
         <ion-icon name="chevron-forward-outline"></ion-icon>
-      </button>
+      </button> -->
 
     </div> <!-- /container -->
 
@@ -90,10 +90,10 @@
               Criamos sistemas, sites e aplicativos que transformam negócios através da tecnologia.
             </p>
 
-            <button class="btn btn-primary">
+            <!-- <button class="btn btn-primary">
               <span>Nossos Projetos</span>
               <ion-icon name="chevron-forward-outline"></ion-icon>
-            </button>
+            </button> -->
 
           </div>
 
